# DockOck

./: Cargo.toml  Dockerfile.ollama  README.md  build.rs  custom_providers.json  docker-compose.yml  tech_stacks.json
.opencode/: README.md
.opencode/agents/: build-engineer.md  business-analyst.md  frontend-developer.md  kafka-expert.md  security-engineer.md  software-architect.md
.opencode/commands/: plan-slice.md  review-slice.md  tech-stack-scan.md
docs/: AI_AGENT_ROUTING_VISUALS.html  AI_DELIVERY_LOOP_VISUALS.html  AI_EXECUTIVE_SUMMARY_VISUALS.html  AI_WORKFLOW_PLAYBOOK.md  AI_WORKFLOW_VISUALS.html  ARCHITECTURE.md  CANCELLATION_AND_STRUCTURED_CONCURRENCY.md  CONTEXT_STREAMING_PLAN.md  CUSTOM_PROVIDER_PLAN.md  EXTENDED_MONGO_INDEXING_PLAN.md  FEATURE_CHAT_AND_MCP.md  FEATURE_CLOUD_VISION.md  FEATURE_CONTEXT_ONLY_FILES.md  FEATURE_DEPENDENCY_GRAPH.md  FEATURE_FILE_GROUPS.md  FEATURE_FOLDER_IMPORT.md  FEATURE_FULL_DOCUMENT_STORAGE.md  FEATURE_MARKDOWN_KNOWLEDGE_BASE.md  FEATURE_OPENSPEC.md  FEATURE_VALIDATION_SOURCE_OF_TRUTH.md  GHERKIN_QUALITY_IMPROVEMENT_PLAN.md  PERFORMANCE_PLAN.md  RAG_AND_OBSERVABILITY_PLAN.md  SETUP.md  WORKFLOW.md  agent 23.03 (1).7z  ai-workflow-playbook.7z  command (1).7z
docs/ai-workflow-playbook/: README.md  agent-routing.html  delivery-loop.html  executive-summary.html  index.md  workflow-map.html
examples/: test_arch.rs  test_markdown.rs  test_orchestrator.rs  test_pipeline.rs  test_rig.rs  test_stream.rs
features/: opencode-itineris.7z
features/opencode-itineris/: README.md
features/opencode-itineris/.opencode/agents/: api-designer.md  build-engineer.md  database-testability-engineer.md  kubernetes-expert.md  performance-engineer.md  pm-coordinator.md  principal-technical-expert.md  product-engineer.md  qa-engineer.md  redis-expert.md  test-automation-engineer.md
features/opencode-itineris/.opencode/commands/: doc-mcp-architecture-scan.md  implement-slice.md
features/opencode-itineris/scripts/: sync-live-to-root.ps1
features/opencode-itineris/starter/: NEW_PROJECT_CHECKLIST.md  PROVIDER_SETUP.md  README.md  opencode.json
features/opencode-itineris/starter/.opencode/agents/: architecture-advisor.md  backend-code-reviewer.md  backend-developer.md  database-architect.md  ddia-advisor.md  devops-engineer.md  doc-mcp-architecture-coordinator.md  documentation-expert.md  frontend-code-reviewer.md  frontend-developer.md  project-preferences-advisor.md  qa-engineer.md  security-engineer.md  test-automation-engineer.md  ui-ux-designer.md
features/opencode-itineris/starter/.opencode/commands/: improve-agents.md  plan-slice.md
features/opencode-itineris/starter/scripts/: bootstrap-opencode.ps1
features/opencode-itineris/starter/variants/dotnet-only/: opencode.json
features/opencode-itineris/starter/variants/platform-heavy/: opencode.json
features/opencode-itineris/template-repo/: .gitignore  PROVIDER_SETUP.md  README.md
features/opencode-itineris/template-repo/.opencode/: README.md
features/opencode-itineris/template-repo/.opencode/agents/: backend-developer.md  database-architect.md  describer.md  pm-coordinator.md  project-preferences-advisor.md  sre-engineer.md  tech-stack-advisor.md
features/opencode-itineris/template-repo/.opencode/commands/: implement-slice.md  repair-slice.md
features/opencode-itineris/template-repo/scripts/: bootstrap-opencode.ps1
features/opencode-itineris/template-repo/variants/dotnet-only/: README.md
features/opencode-itineris/template-repo/variants/frontend-heavy/: README.md  opencode.json
features/opencode-itineris/template-repo/variants/platform-heavy/: README.md
openspec-service/: Dockerfile  package.json  server.js
otel/: config.yaml
postman/: DockOck_MCP.postman_collection.json
src/: app.rs  cache.rs  chat.rs  context.rs  depgraph.rs  gherkin.rs  main.rs  markdown.rs  mcp.rs  memory.rs  openspec.rs  rag.rs  session.rs  tech_stack.rs  validation.rs
src/llm/: mod.rs  prefix_cache.rs  provider.rs
src/parser/: excel.rs  mod.rs  visio.rs  word.rs
