[package]
name = "dockock"
version = "0.1.0"
edition = "2021"
description = "Parse Word, Visio, and Excel files and transform them into Gherkin-style documentation using a local Ollama LLM"
authors = ["DockOck Contributors"]
license = "MIT"

[dependencies]
# UI framework
eframe = "0.29.1"
egui = "0.29.1"

# LLM integration (Ollama via rig-core)
rig-core = "0.32.0"

# File parsing – Excel
calamine = { version = "0.34.0", features = ["dates"] }

# File parsing – Word/Visio (ZIP-based XML formats)
zip = "2.2.3"
roxmltree = "0.21.1"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"

# File dialog
rfd = "0.15.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
