[package]
name = "dockock"
version = "0.1.0"
edition = "2024"
description = "Parse Word, Visio, and Excel files and transform them into Gherkin-style documentation using a local Ollama LLM"
authors = ["DockOck Contributors"]
license = "MIT"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
# UI framework
eframe = "0.33.3"
egui = "0.33.3"

# LLM integration (Ollama via rig-core)
rig-core = "0.32.0"

# File parsing – Excel
calamine = { version = "0.34.0", features = ["dates"] }

# File parsing – Word/Visio (ZIP-based XML formats)
zip = "8.2.0"
roxmltree = "0.21.1"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"

# File dialog
rfd = "0.17.2"

# Image processing and HTTP for vision model
base64 = "0.22"
reqwest = { version = "0.13.2", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
