[package]
name = "dockock"
version = "0.1.0"
edition = "2024"
description = "Parse Word, Visio, and Excel files and transform them into Gherkin-style documentation using a local Ollama LLM"
authors = ["DockOck Contributors"]
license = "MIT"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
# UI framework
eframe = "0.33.3"
egui = "0.33.3"

# LLM integration (Ollama via rig-core)
rig-core = { version = "0.32.0", features = ["derive"] }

# Environment file loading
dotenv = "0.15"

# File parsing – Excel
calamine = { version = "0.34.0", features = ["dates"] }

# File parsing – Word/Visio (ZIP-based XML formats)
zip = "8.2.0"
roxmltree = "0.21.1"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"

# File dialog
rfd = "0.17.2"

# Image processing and HTTP for vision model
base64 = "0.22"
reqwest = { version = "0.13.2", features = ["json"] }

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Optional: OpenTelemetry export (behind feature flag)
tracing-opentelemetry = { version = "0.32.1", optional = true }
opentelemetry = { version = "0.31", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["tonic", "trace"], optional = true }

# Caching
sha2 = "0.10"
postcard = { version = "1", features = ["alloc"] }

# Text processing
regex = "1"

# Async utilities (CancellationToken, TaskTracker)
tokio-util = { version = "0.7", features = ["rt"] }

# RAG: MongoDB vector store + embeddings
mongodb = "3"
rig-mongodb = "0.4.1"

# RAG: Local CPU-only embeddings fallback
rig-fastembed = "0.3.1"

# Memory: unique IDs and timestamps for factoid storage
nanoid = "0.4"
chrono = "0.4"

[features]
default = []
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
